--- a/report/report.tex
+++ b/report/report.tex
@@ -47,7 +47,7 @@
 
 \title{Comparing functional Embedded Domain-Specific Languages for hardware description}
 
-\date{\today}
+\date{December 12th, 2013}
 
 \author
 {
